# (C) 2010 SIGIDAGI 
#
CMAKE_MINIMUM_REQUIRED(VERSION 2.6)

SET(OI_MAJOR 0)
SET(OI_MINOR 1)
SET(OI_PATCH 10)

MESSAGE(STATUS "Configuring OiVibartions ${ARMA_MAJOR}.${ARMA_MINOR}.${ARMA_PATCH}")
MESSAGE(STATUS "Configuring OiVibartions cmake_source_dir  = ${CMAKE_SOURCE_DIR}")


SET(CMAKE_MODULE_PATH ${CMAKE_MODULE_PATH} "${CMAKE_SOURCE_DIR}/build/cmake/Modules/")

#INCLUDE(FindBoost)

PROJECT(OiVibrations CXX)

#SET(CMAKE_CXX_FLAGS "-g -Wall")
#SET(CMAKE_CXX_FLAGS "-std=gnu++0x")

SET(OI_USE_NEKO false)
SET(OI_USE_MYSQLPP false)
SET(OI_USE_BOOST  false)

MESSAGE(STATUS "*** ")
MESSAGE(STATUS "*** The OiVibrations run-time library component will be an alias for the following libraries:")
MESSAGE(STATUS "*** OI_LIBS = ${OI_LIBS}")
MESSAGE(STATUS "*** ")

FIND_PACKAGE(Boost REQUIRED)
FIND_PACKAGE(Armadillo REQUIRED)
FIND_PACKAGE(Neko)
FIND_PACKAGE(Mysql++)

IF(MYSQLPP_FOUND)
    INCLUDE_DIRECTORIES(${MYSQLPP_INCLUDE_DIR})   
    MESSAGE(STATUS "Mysql++_INCLUDE_DIR = ${MYSQLPP_INCLUDE_DIR}")
    INCLUDE_DIRECTORIES(${MYSQL_INCLUDE_DIR})
    MESSAGE(STATUS "Mysql_INCLUDE_DIR = ${MYSQL_INCLUDE_DIR}")
    SET(OI_USE_MYSQLPP true)
ENDIF(MYSQLPP_FOUND)


IF(Boost_FOUND)
  MESSAGE(STATUS "Boost_MAJOR_VERSION = ${Boost_MAJOR_VERSION}")
  MESSAGE(STATUS "Boost_MINOR_VERSION = ${Boost_MINOR_VERSION}")
  
  IF(Boost_MAJOR_VERSION GREATER 0)
    IF(Boost_MINOR_VERSION GREATER 33)
      SET(OI_USE_BOOST true)
      MESSAGE(STATUS "Boost_INCLUDE_DIR = ${Boost_INCLUDE_DIR}")
    ENDIF(Boost_MINOR_VERSION GREATER 33)
  ENDIF(Boost_MAJOR_VERSION GREATER 0)
 
  SET(OI_USE_BOOST true)
ENDIF(Boost_FOUND)

IF(OI_USE_BOOST STREQUAL false)
  MESSAGE(STATUS "Boost libraries either not found or their version is too low (version 1.34 or later is good).")
  MESSAGE(STATUS "( It's possible that CMake didn't find the particular version of Boost you may have. )")
ENDIF(OI_USE_BOOST STREQUAL false)


IF(NEKO_FOUND)
    SET(OI_USE_NEKO true)
ENDIF(NEKO_FOUND)

IF(OI_USE_BOOST STREQUAL true)
  INCLUDE_DIRECTORIES(include ${Boost_INCLUDE_DIR})
ELSE(OI_USE_BOOST STREQUAL true)
  INCLUDE_DIRECTORIES(include)
ENDIF(OI_USE_BOOST STREQUAL true)

ADD_SUBDIRECTORY(src)
